--- a/src/main/webapp/pages/farmacia/medicamento/lista.xhtml
+++ b/src/main/webapp/pages/farmacia/medicamento/lista.xhtml
@@ -31,7 +31,7 @@
                 <!--Botones de admin-->
                 <div class="admin-actions">
 
-                    <h:link value="#{messages['common.add']}" rendered="#{true}" outcome="medicamento" styleClass="btn primary">
+                    <h:link value="#{messages['common.add']}" rendered="#{true}" outcome="agregarM" styleClass="btn primary">
                         <f:param name="pacienteId"></f:param>
                         <f:param name="backView" value="lista"></f:param>
                     </h:link>
