--- a/src/main/webapp/pages/farmacia/medicamento/medicamento.xhtml
+++ b/src/main/webapp/pages/farmacia/medicamento/medicamento.xhtml
@@ -127,6 +127,8 @@
                             <glue:input id="dirCasaComercial" name="dirCasaComercial" type="text" label="#{messages['common.dircasacomercial']}" value="#{medicamentoHome.instance.dirCasaComercial}" required="false" inlinehelp="#{messages['common.dircasacomercial']}" execute="@this save" render="dirCasaComercial"/>                            
                             <glue:input id="referencia" name="referencia" type="textarea" label="#{messages['common.referenciaMedicamento']}" value="#{medicamentoHome.instance.referencia}" 
                                         required="false" inlinehelp="#{messages['common.referenciaMedicamento']}" execute="@this save" render="referencia"/>                            
+                            <glue:input id="dosificacion" name="dosificacion" type="textarea" label="Dosifición" value="#{medicamentoHome.instance.dosificacion}" 
+                                            required="false" inlinehelp="Ingrese la dosificación del medicamento" execute="@this save" render="dosificacion"/> 
                             <h:panelGroup id="devp" layout="block" class="clearfix" rendered="#{medicamentoHome.instance.unidades ne 0}">
                                 <label for="devolucion">Habilitar devolución</label>
                                 <div class="input" >
