--- a/src/main/webapp/pages/depSalud/agenda.xhtml
+++ b/src/main/webapp/pages/depSalud/agenda.xhtml
@@ -8,6 +8,7 @@
       xmlns:p="http://primefaces.org/ui"      
       xmlns:pe="http://primefaces.org/ui/extensions"
       xmlns:glue="http://eqaula.org/jsf/facelets"
+      xmlns:s="http://jboss.org/seam/faces"
       xmlns:ocp="http://java.sun.com/jsf/composite/ocpcommon">
 
     <ui:composition template="/WEB-INF/view/templates/glue.xhtml">
@@ -30,18 +31,28 @@
                 <!--Botones de admin-->
                 <div class="admin-actions ">
 
-                    <h:link title="#{messages['common.add']} #{messages['turno.nombre']}" rendered="#{true}" outcome="/pages/secretaria/lista" styleClass="btn btn-img" >
+                    <!--<h:link title="# {messages['common.add']} # {messages['turno.nombre']}" outcome="/pages/depSalud/turno" styleClass="btn btn-img" >
                         <p:graphicImage value="/resources/img/turno.png" width="40" height="40"/>                        
                         <f:param name="backView" value="lista"></f:param>
-                    </h:link>      
+                    </h:link> -->
 
-                    <h:panelGroup style="float: right">
+                    <h:panelGroup style="">
+                        <p:selectOneMenu id="present" value="#{turnoHome.estado}" converter="#{omnifaces.SelectItemsConverter}" 
+                                             effect="fade" var="m"  >  
+                            <f:selectItem itemLabel="#{messages['common.choice']}" itemValue="" />  
+                            <f:selectItem itemLabel="Por Realizar" itemValue="Por Realizar" />  
+                            <f:selectItem itemLabel="Realizada" itemValue="Realizada" />      
+                            <f:selectItem itemLabel="Postergada" itemValue="Postergada" />  
+                            <f:selectItem itemLabel="No Realizada" itemValue="No Realizada" />
+                            <p:ajax event="change" update=":form:buscar"/>
+                        </p:selectOneMenu>
+                        &nbsp;
                         <p:calendar id="criterioBuscar" size ="15" value="#{turnoHome.fechaBusc}" title="Ingrese una fecha"
-                                    locale="es" navigator="true" showButtonPanel="true" disabledWeekends="false" >
+                                    locale="es" navigator="true" showButtonPanel="true" disabledWeekends="true"  pattern="dd-MMM-yyyy">
                             <!--<p:ajax event="dateSelect" />-->
                         </p:calendar>
                         &nbsp;
-                        <p:commandButton id="buscar" value="Buscar" action="#{turnoHome.buscarPorFecha()}"  styleClass="btn info" update=":form:tablaTurnos">
+                        <p:commandButton id="buscar" value="Buscar" action="#{turnoHome.buscarPor()}"  styleClass="btn info" update="@form :form:tablaTurnos">
                             <!--<p:ajax process="@this" update=":form:tablaTurnos" rendered=":form:tablaTurnos"/>-->
                         </p:commandButton>    
                         &nbsp;
@@ -51,13 +62,13 @@
                 </div>
                 <p:dataTable id="tablaTurnos" value="#{turnoHome.listaTurnos}" var="turno_" editable="true"
                              paginator="true" emptyMessage="No existe ningun turno"
-                             rows="20" paginatorPosition="top"
+                             rows="20" paginatorPosition="top" selection="single"
                              paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {RowsPerPageDropdown} {NextPageLink} {LastPageLink} "
                              rowsPerPageTemplate="10,20,30,50,100">
 
                     <p:column headerText="#{messages['paciente.nombre']}" style="width: 30%">
                         <h:outputText value="#{turno_.paciente.nombres}"/>
-                        &nbsp;&nbsp;&nbsp;
+                        &nbsp;&nbsp;
                         <h:outputText value="#{turno_.paciente.apellidos}"/>
                     </p:column>                            
                     <p:column headerText="#{messages['comun.fecha']} #{messages['citaMedica.nombre']}" style="width: 20%">
@@ -76,23 +87,115 @@
                         <h:outputText value="#{turno_.estado}" />
                     </p:column>                                       
                     <p:column headerText="#{'Opción'}" style="width: 5%">                                                
-                        <p:commandLink id="button-delete" type="button" title="#{messages['common.delete']}"
+                        <!--<p:commandLink id="button-delete" type="button" title="Postergar Cita Médica"
                                        onclick="#{'deletedDlg.show()'}"  immediate="true" styleClass="btn success" 
                                        style="width: 20px; height: 10px;">                                                        
-                            <p:graphicImage value="/resources/images/delete.gif" width="18" height="13"/>
-                            <f:setPropertyActionListener value="#{turno_}" target="#{turnoHome.instance}"/>
+                            <p:graphicImage value="/resources/images/Icon_edit.gif" width="18" height="13"/>
+                            
+                            <f:setPropertyActionListener value="# {turno_}" target="# {turnoHome.turnoSelect}"/>
                             <p:ajax process="@this" update=":cancel-dialog" />
+                        </p:commandLink>-->
+                        <h:link title="#{'Postergar'} #{messages['turno.nombre']}" outcome="/pages/depSalud/turno" styleClass="btn success" style="height: 10px;">
+                            <p:graphicImage value="/resources/images/Icon_edit.gif" width="18" height="12"/>
+                            <f:param name="backView" value="depSalud/agenda"></f:param>
+                            <f:param name="turnoId" value="#{turno_.id}"></f:param>
+                            <f:param name="pacienteId" value="#{turno_.paciente.id}"></f:param>
+                        </h:link>
+                        &nbsp;&nbsp;
+                        <p:commandLink id="add-consult" type="button" title="agregar consulta"
+                                       action="#{turnoHome.agregarConsulta()}"  immediate="true" styleClass="btn success" 
+                                       style="width: 20px; height: 10px;">
+                            <p:graphicImage value="/resources/img/new2.png" width="18" height="13"/>
+                            <f:setPropertyActionListener value="#{turno_}" target="#{turnoHome.instance}"/>  
                         </p:commandLink>
                     </p:column>
                 </p:dataTable>
             </h:form>
-            <p:dialog id="cancel-dialog" header="#{messages['common.delete.confirm']}" widgetVar="deletedDlg" resizable="false" modal="true">  
-                <h:form id="form-dialog-confirm-delete">
-                    <h:panelGroup layout="block" style="padding:5px;">  
-                        <h:outputText value="#{messages['common.delete.confirm.message']}"/>  
-                    </h:panelGroup>  
-                    <p:commandButton value="#{messages['common.yes']}" oncomplete="deletedDlg.hide();"  
-                                     action="#{turnoHome.borrarEntidad()}"                                          
+            <p:dialog id="cancel-dialog" header="Postergar Cita Médica" widgetVar="deletedDlg" resizable="false" modal="true">  
+                <h:form id="form-edit">
+                    <h:outputText value="#{turnoHome.instance.id}  t"/>
+                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />  
+                    <p:panel id="paneltitle" header="Información del Paciente" styleClass="clearfix">
+                        <glue:output id="ced" name="ced" type="text" label="#{messages['profile.dni']}" 
+                                     value="#{turnoHome.instance.paciente.cedula}" required="false" execute="@this save" render="ced" styleClass="xLarge" disabled="true"/>
+                        <glue:output id="nombres" name="nombres" type="text" label="#{messages['common.firstname']}" 
+                                     value="#{turnoHome.instance.paciente.nombres}" required="false" execute="@this save" render="nombres" styleClass="xLarge" disabled="true"/>
+                        <glue:output id="apellidos" name="apellidos" type="text" label="#{messages['common.surname']}" 
+                                     value="#{turnoHome.instance.paciente.apellidos}" required="false" execute="@this save" render="apellidos" styleClass="xLarge" disabled="true"/>
+                    </p:panel>
+                    <p:panel id="panelTurno" header="#{messages['citaMedica.nombre']}" styleClass="clearfix" >
+
+                        <h:panelGroup id="fechaEP" layout="block" styleClass="clearfix">
+                            <label for="fechaC" >#{messages['comun.fecha']} #{messages['receta.emision']}</label>
+                            <div class="input">                                                         
+                                <p:calendar id="fechaE" value="#{turnoHome.instance.fechaEmision}"  label="" dir="ltr" showButtonPanel="true" navigator="true"
+                                            disabled="true" pattern="EEE, dd-MMMM-yyyy"  locale="es" disabledWeekends="true" >                                
+                                </p:calendar>                                                                                                      
+                                <h:graphicImage value="#{resource['success.gif']}" rendered="#{turnoHome.instance.fechaEmision ne null}"
+                                                styleClass="validation-status" />                                                        
+                            </div>                    
+                            <span class="help-inline" style="margin:-20px 0 0 150px; float: left"><br/>#{messages['comun.fecha']} #{messages['receta.emision']}<ocp:message forId="fechaE" /></span>
+                        </h:panelGroup>  
+
+                        <h:panelGroup layout="block" class="clearfix" rendered="true">
+                            <label for="nombreServicio" >#{messages['servicioMedico.nombre1']} *</label>
+                            <div class="input">
+                                <p:selectOneMenu id="nombreServicio" value="#{turnoHome.instance.servicio}" effect="fade"  converter="#{omnifaces.SelectItemsConverter}" 
+                                                 var="ser" rendered="true" required="true">
+                                    <f:selectItem  itemLabel = "#{messages['common.choice']}"  itemValue="" />                             
+                                    <f:selectItem  itemLabel = "MÉDICO"  itemValue="MÉDICO" /> 
+                                    <f:selectItem  itemLabel = "ODONTOLÓGICO"  itemValue="ODONTOLÓGICO" /> 
+                                    <p:ajax event="change" update="@parent" partialSubmit="true" />
+                                </p:selectOneMenu> 
+                                <h:graphicImage value="#{resource['success.gif']}" rendered="#{turnoHome.instance.servicio ne null}"
+                                                styleClass="validation-status" />      
+                            </div>                   
+                            <span class="help-inline" style="margin:-20px 0 0 150px; float: left"><br/>#{messages['servicioMedico.nombre.lineaAyuda']}<ocp:message forId="nombreServicio" /></span>
+                        </h:panelGroup> 
+                        <p:spacer height="15"/>    
+                        <h:panelGroup layout="block" styleClass="clearfix">
+                            <label for="motivo" >#{messages['turno.motivo']} </label>
+                            <div class="input">                                                         
+                                <p:inputTextarea id="motivo" value="#{turnoHome.instance.motivo}"  label="" 
+                                                 style="width: 60%; height: 60px;" required="true">
+                                    <p:ajax event="blur" update="@parent" partialSubmit="true"/>
+                                </p:inputTextarea>                            
+                                <h:graphicImage value="#{resource['success.gif']}" rendered="#{not empty turnoHome.instance.motivo}"
+                                                styleClass="validation-status" />                                                        
+                            </div>                    
+                            <span class="help-inline" style="margin:-20px 0 0 150px; float: left"><br/>Motivo por el cual solitica la cita médica<ocp:message forId="motivo" /></span>
+                        </h:panelGroup> 
+                        <h:panelGroup id="fechaCP" layout="block" styleClass="clearfix">
+                            <label for="fechaC" >#{messages['comun.fecha']} #{messages['citaMedica.nombre']}*</label>
+                            <div class="input">                                                         
+                                <p:calendar id="fechaC" value="#{turnoHome.fecha}"  label="" dir="ltr" showButtonPanel="true" navigator="true"
+                                            disabled="false" pattern="dd-MMM-yyyy"  locale="es" disabledWeekends="true" required="true">
+                                    <!--<f:validator validatorId="dateValidatorTurno"/>-->
+                                    <p:ajax event="dateSelect" process="validadorFechas fechaC " update="@parent :form-edit:hora :form-edit:save" partialSubmit="true" rendered=":form-edit:hora"/>                                  
+                                </p:calendar>                                                                                                      
+                                <h:graphicImage value="#{resource['success.gif']}" rendered="#{turnoHome.fecha ne null}"
+                                                styleClass="validation-status" />                                                        
+                            </div>                    
+                            <span class="help-inline" style="margin:-20px 0 0 150px; float: left"><br/>#{messages['comun.fecha.now']}<ocp:message forId="fechaC" /></span>
+                        </h:panelGroup>  
+                        <s:validateForm id="validadorFechas" validatorId="dateValidatorTurno" />-
+                        <h:panelGroup layout="block" class="clearfix" rendered="true">
+                            <label for="hora" >#{messages['comun.horaCita']}  </label>
+                            <div class="input">
+                                <p:selectOneMenu id="hora" value="#{turnoHome.horaD}" effect="fade"  converter="#{omnifaces.SelectItemsConverter}" 
+                                                 var="h_" rendered="true" disabled="#{empty turnoHome.fecha}">
+                                    <f:selectItem  itemLabel = "#{messages['common.choice']}"  itemValue="" />                                                             
+                                    <f:selectItems value="#{turnoHome.listaHoras}" var="hora_" itemLabel ="#{hora_}"  itemValue="#{hora_}" /> 
+                                    <p:ajax event="change" update="@parent" partialSubmit="true" />
+                                </p:selectOneMenu> 
+                                <h:graphicImage value="#{resource['success.gif']}" rendered="#{turnoHome.horaD ne null}"
+                                                styleClass="validation-status" />      
+                            </div>                   
+                            <span class="help-inline" style="margin:-20px 0 0 150px; float: left"><br/>#{'Hora de la cita médica'}<ocp:message forId="nombreServicio" /></span>
+                        </h:panelGroup> 
+                    </p:panel>
+                    <p:commandButton id="save" value="#{messages['common.yes']}" oncomplete="deletedDlg.hide();"  
+                                     action="#{turnoHome.postergar()}"                                          
                                      ajax="true" process="@this"  
                                      style="margin-top:10px;">  
                     </p:commandButton>  
