--- a/src/main/webapp/pages/secretaria/lista.xhtml
+++ b/src/main/webapp/pages/secretaria/lista.xhtml
@@ -47,26 +47,25 @@
                     <f:param name="backView" value="secretaria/lista"></f:param>
                 </h:link>
                 #{' '}
-                <h:link id="button-abrirFM" title="#{messages['fichaMedica.abrir']}" rendered="#{true}" outcome="/pages/depSalud/fichaMedica" styleClass="btn btn-img" 
-                        disabled="#{empty pacienteListaServicio.pacienteSelecionado}">
-                    <p:graphicImage value="/resources/images/consultaMed.png" width="40" height="40"/>
-                    <f:param name="pacienteId" value="#{pacienteListaServicio.pacienteSelecionado.id}"></f:param>
-                    <f:param name="backView" value="lista"></f:param>
-                </h:link>
+                <p:commandLink id="button-abrirFM" title="#{messages['fichaMedica.abrir']}"  action="#{pacienteListaServicio.renderizarVistaMatriculado('/pages/depSalud/fichaMedica', 'lista')}" 
+                               styleClass="btn btn-img" 
+                               disabled="#{empty pacienteListaServicio.pacienteSelecionado}" rendered="#{!account.tienePermiso('LABORATORISTAS')}">
+                    <p:graphicImage value="/resources/images/consultaMed.png" width="40" height="40"/>                    
+                </p:commandLink>
                 #{' '}
-                <h:link id="button-servicioM" title="#{messages['common.add']} #{messages['servicioMedico.nombre']}" outcome="/pages/depSalud/enfermeria/serviciosMedicos/servicioMedico" styleClass="btn btn-img" 
+                <h:link id="button-servicioM" title="#{messages['common.add']} #{messages['servicioMedico.nombre']}" outcome="/pages/depSalud/enfermeria/serviciosMedicos/servicioMedico" 
+                        styleClass="btn btn-img" 
                         disabled="#{empty pacienteListaServicio.pacienteSelecionado}" rendered="#{account.tienePermiso('ENFERMEROS')}">
                     <p:graphicImage value="/resources/img/servicioMed.png" width="40" height="40"/>
                     <f:param name="pacienteId" value="#{pacienteListaServicio.pacienteSelecionado.id}"></f:param>                    
                     <f:param name="backView" value="lista"></f:param>
                 </h:link>
                 #{' '}
-                <h:link id="button-Turno" title="#{messages['common.add']} #{messages['turno.nombre']}" outcome="/pages/depSalud/turno" styleClass="btn btn-img" 
-                        disabled="#{empty pacienteListaServicio.pacienteSelecionado}" >
-                    <p:graphicImage value="/resources/img/turno.png" width="40" height="40"/>
-                    <f:param name="pacienteId" value="#{pacienteListaServicio.pacienteSelecionado.id}"></f:param>                    
-                    <f:param name="backView" value="depSalud/agenda"></f:param>
-                </h:link>
+                <p:commandLink id="button-Turno" title="#{messages['common.add']} #{messages['turno.nombre']}" action="#{pacienteListaServicio.renderizarVistaMatriculado('/pages/depSalud/turno', 'depSalud/agenda')}" 
+                               styleClass="btn btn-img" 
+                               disabled="#{empty pacienteListaServicio.pacienteSelecionado}" rendered="#{!account.tienePermiso('LABORATORISTAS')}">
+                    <p:graphicImage value="/resources/img/turno.png" width="40" height="40"/>                  
+                </p:commandLink>
                 #{' '}
                 <h:link id="button-labC" title="#{messages['common.add']} #{messages['Examen.pedidos']}" outcome="/pages/labClinico/pedidoE" styleClass="btn btn-img" 
                         disabled="#{empty pacienteListaServicio.pacienteSelecionado}" rendered="#{account.tienePermiso('LABORATORISTAS')}">
@@ -75,8 +74,7 @@
                     <f:param name="backView" value="/labClinico/listaPedidosExam"></f:param>
                 </h:link>
                 #{' '}
-                <h:link id="buscar" title="Cargar Estudiante del Sistema de Gestion de " outcome="/pages/secretaria/search" styleClass="btn btn-img" 
-                         >
+                <h:link id="buscar" title="Cargar Estudiante del Sistema de Gestion de Académica" outcome="/pages/secretaria/search" styleClass="btn btn-img" >
                     <p:graphicImage value="/resources/images/buscar.png" width="50" height="40"/>
                     <f:param name="backView" value="secretaria/lista"></f:param>
                 </h:link>
@@ -91,65 +89,69 @@
             </div>
 
             <!--tabla de datos-->
-            <p:dataTable id="tablaPacientes"  var="paciente_" value="#{pacienteListaServicio.resultList}"
-                         paginator="true" rows="20" 
-                         paginatorPosition="top"
-                         paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {RowsPerPageDropdown} {NextPageLink} {LastPageLink} "
-                         rowsPerPageTemplate="10,20,30,50,100"
-                         lazy="true" resizableColumns="true" liveResize="true"
-                         rowKey="#{paciente_.id}"
-                         selection="#{pacienteListaServicio.pacienteSelecionado}"
-                         rendered="true"
-                         selectionMode="single">
-                <!--Acciones Ajax, que me permiten seleccionar y desseleccionar un paciente-->
-                <p:ajax event="rowSelect" listener="#{pacienteListaServicio.onRowSelect}"   
-                        update=":form:button-edit :form:messages :form:button-abrirFM :form:button-servicioM 
-                        :form:button-labC :form:button-Turno :form:buscar"/>                 
-                <p:ajax event="rowUnselect" listener="#{pacienteListaServicio.onRowUnselect}" 
-                        update=":form:button-edit :form:messages :form:button-abrirFM :form:button-servicioM 
-                        :form:button-labC :form:button-Turno :form:buscar"/>
+            <div style="float: left">
+                <p:dataTable id="tablaPacientes"  var="paciente_" value="#{pacienteListaServicio.resultList}"
+                             paginator="true" rows="20" 
+                             paginatorPosition="top"
+                             paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {RowsPerPageDropdown} {NextPageLink} {LastPageLink} "
+                             rowsPerPageTemplate="10,20,30,50,100"
+                             lazy="true" resizableColumns="true" liveResize="true"
+                             rowKey="#{paciente_.id}"
+                             selection="#{pacienteListaServicio.pacienteSelecionado}"
+                             rendered="true"
+                             selectionMode="single">
+                    <!--Acciones Ajax, que me permiten seleccionar y desseleccionar un paciente-->
+                    <p:ajax event="rowSelect" listener="#{pacienteListaServicio.onRowSelect}"   
+                            update=":form:button-edit :form:messages :form:button-abrirFM :form:button-servicioM 
+                            :form:button-labC :form:button-Turno :form:buscar"/>                 
+                    <p:ajax event="rowUnselect" listener="#{pacienteListaServicio.onRowUnselect}" 
+                            update=":form:button-edit :form:messages :form:button-abrirFM :form:button-servicioM 
+                            :form:button-labC :form:button-Turno :form:buscar"/>
 
-                <!--Columnas para mostrar en la tabla-->
-                <p:column sortBy="#{paciente_.cedula}" style="width: 15%; text-align: center;">
-                    <f:facet name="header">  
-                        <h:outputText value="#{messages['profile.dni']}" />  
-                    </f:facet> 
-                    <h:outputText value="#{paciente_.cedula}" />
-                </p:column>
-                <p:column sortBy="#{paciente_.nombres}" style="text-align: center;">
-                    <f:facet name="header">  
-                        <h:outputText value="#{messages['common.firstname']}" />  
-                    </f:facet> 
-                    <h:outputText value="#{paciente_.nombres}" />
-                </p:column>
-                <p:column sortBy="#{paciente_.apellidos}" style="text-align: center;">
-                    <f:facet name="header">  
-                        <h:outputText value="#{messages['common.surname']}" />  
-                    </f:facet> 
-                    <h:outputText value="#{paciente_.apellidos}" />
-                </p:column>
-                <p:column sortBy="#{paciente_.edad}" style="text-align: center;">
-                    <f:facet name="header">  
-                        <h:outputText value="#{messages['common.edad']}" />  
-                    </f:facet> 
-                    <h:outputText value="#{paciente_.edad}" />
-                </p:column>
-                <p:column sortBy="#{paciente_.email}" style="text-align: center;">
-                    <f:facet name="header">  
-                        <h:outputText value="#{messages['common.email']}" />  
-                    </f:facet> 
-                    <h:outputText value="#{paciente_.email}" />
-                </p:column>
-            </p:dataTable>
-            <h:panelGrid id="export" class="columns" >
-                <p:panel>
-                    <h:outputText value="Exportar Datos" />  
-                    <br/>
-                    <h:commandLink action="#{reporteListas.renderPacientes()}" >                    
-                        <p:graphicImage value="/resources/images/pdf.png" />                          
-                    </h:commandLink>                   
-                </p:panel>
-            </h:panelGrid>
+                    <!--Columnas para mostrar en la tabla-->
+                    <p:column sortBy="#{paciente_.cedula}" style="width: 15%; text-align: center;">
+                        <f:facet name="header">  
+                            <h:outputText value="#{messages['profile.dni']}" />  
+                        </f:facet> 
+                        <h:outputText value="#{paciente_.cedula}" />
+                    </p:column>
+                    <p:column sortBy="#{paciente_.nombres}" style="text-align: center;">
+                        <f:facet name="header">  
+                            <h:outputText value="#{messages['common.firstname']}" />  
+                        </f:facet> 
+                        <h:outputText value="#{paciente_.nombres}" />
+                    </p:column>
+                    <p:column sortBy="#{paciente_.apellidos}" style="text-align: center;">
+                        <f:facet name="header">  
+                            <h:outputText value="#{messages['common.surname']}" />  
+                        </f:facet> 
+                        <h:outputText value="#{paciente_.apellidos}" />
+                    </p:column>
+                    <p:column sortBy="#{paciente_.edad}" style="text-align: center;">
+                        <f:facet name="header">  
+                            <h:outputText value="#{messages['common.edad']}" />  
+                        </f:facet> 
+                        <h:outputText value="#{paciente_.edad}" />
+                    </p:column>
+                    <p:column sortBy="#{paciente_.email}" style="text-align: center;">
+                        <f:facet name="header">  
+                            <h:outputText value="#{messages['common.email']}" />  
+                        </f:facet> 
+                        <h:outputText value="#{paciente_.email}" />
+                    </p:column>
+                </p:dataTable>
+
+                <h:panelGrid id="export" class="columns" >
+                    <p:panel>
+                        <h:outputText value="Exportar Datos" />  
+                        <br/>
+                        <h:commandLink action="#{reporteListas.renderPacientes()}" >                    
+                            <p:graphicImage value="/resources/images/pdf.png" /> 
+                            <f:setPropertyActionListener value="#{pacienteListaServicio.parametroBusqueda}" target="#{reporteListas.parametroBusqued}"/>
+                        </h:commandLink>                   
+                    </p:panel>
+                </h:panelGrid>
+            </div>
         </h:form>
     </ui:define>
 </ui:composition>
